Change: Parametalize config.cfg

--- a/dbgen/config.tpl.cfg
+++ b/dbgen/config.tpl.cfg
@@ -1,3 +1,3 @@
 SQLALCHEMY_TRACK_MODIFICATIONS = False
-SQLALCHEMY_DATABASE_URI = 'sqlite://'
-ID_LIST_FILE = '../ids.json'
+SQLALCHEMY_DATABASE_URI = '${database_url}'
+ID_LIST_FILE = '${ids_json_path}'
