Fix: Also store hidden files; * doesn't catch them

--- a/dbgen/Makefile
+++ b/dbgen/Makefile
@@ -2,9 +2,10 @@ FILE?=./function.zip
 DELIVERABLE=${abspath ${FILE}}
 
 ${DELIVERABLE}: $(wildcard ./*)
-	zip -r9 ${DELIVERABLE} ./*
+	-rm ${DELIVERABLE}
+	zip -r9 ${DELIVERABLE} ./
 	$(eval VENV = $(shell pipenv --venv))
-	cd ${VENV}/lib/python3.6/site-packages && zip -r9 ${DELIVERABLE} ./*
+	cd ${VENV}/lib/python3.6/site-packages && zip -r9 ${DELIVERABLE} ./
 
 .PHONY: install
 install:
