Change: Use different pipfile from dbgen

--- a/dbgen/Pipfile
+++ b/dbgen/Pipfile
@@ -1,1 +1,16 @@
-backend/Pipfile
+[[source]]
+url = "https://pypi.python.org/simple"
+verify_ssl = true
+name = "pypi"
+
+[packages]
+flask = "*"
+flask-sqlalchemy = "*"
+psycopg2-binary = "*"
+
+[dev-packages]
+
+[requires]
+python_version = "3.6"
+
+[scripts]
