--- a/terraform.tfvars.sample
+++ b/terraform.tfvars.sample
@@ -2,6 +2,9 @@ aws_access_key = "<YOUR_ACCESS_KEY_HERE>"
 aws_secret_key = "<YOUR_SECRET_KEY_HERE>"
 aws_id = "<YOUR_AWS_ID_HERE>"
 
+admin_cidr_ingress = "0.0.0.0/0"
+dbgen_schedule = "cron(<WHEN GENERATES DB DATA>)"
+
 secret_key = "<Fernet Secret key>"
 recaptcha_secret_key = "<reCAPTCHA v3 secret key>"
 db_username = "<DB USERNAME>"
