--- a/terraform.tfvars.sample
+++ b/terraform.tfvars.sample
@@ -5,6 +5,7 @@ aws_id = "<YOUR_AWS_ID_HERE>"
 admin_cidr_ingress = "0.0.0.0/0"
 dbgen_schedule = "cron(<WHEN GENERATES DB DATA>)"
 acme_email = "<YOUR EMAIL>"
+admin_secret_id = "<ADMIN_SECRET_ID>"
 
 secret_key = "<Fernet Secret key>"
 recaptcha_secret_key = "<reCAPTCHA v3 secret key>"
