--- a/dbgen/Makefile
+++ b/dbgen/Makefile
@@ -1,13 +1,13 @@
 FILE?=./function.zip
 DELIVERABLE=${abspath ${FILE}}
 
-${DELIVERABLE}: $(wildcard ./*)
+${DELIVERABLE}: $(wildcard ./*.py) Pipfile.lock
 	-rm ${DELIVERABLE}
 	zip -r9 ${DELIVERABLE} ./
 	$(eval VENV = $(shell pipenv --venv))
 	cd ${VENV}/lib/python3.6/site-packages && zip -r9 ${DELIVERABLE} ./
 
 .PHONY: install
-install:
+install: Pipfile
 	pipenv install
 
