--- a/dbgen/Makefile
+++ b/dbgen/Makefile
@@ -1,11 +1,11 @@
-FILE?=.,/dbgen_function.zip
+FILE?=../dbgen_function.zip
 DELIVERABLE=${abspath ${FILE}}
 
 ${DELIVERABLE}: $(wildcard ./*.py) Pipfile.lock
 	-rm ${DELIVERABLE}
-	zip -r9 ${DELIVERABLE} ./
+	zip -qr9 ${DELIVERABLE} ./
 	$(eval VENV = $(shell pipenv --venv))
-	cd ${VENV}/lib/python3.6/site-packages && zip -r9 ${DELIVERABLE} ./
+	cd ${VENV}/lib/python3.6/site-packages && zip -qr9 ${DELIVERABLE} ./
 
 Pipfile.lock: Pipfile
 	pipenv install
