Change: Don't put .pyc in the archive

--- a/dbgen/Makefile
+++ b/dbgen/Makefile
@@ -5,7 +5,8 @@ ${DELIVERABLE}: $(wildcard ./*.py) ids.json install-deps
 	-rm ${DELIVERABLE}
 	zip -qr9 ${DELIVERABLE} ./
 	$(eval VENV = $(shell pipenv --venv))
-	cd ${VENV}/lib/python3.6/site-packages && zip -qr9 ${DELIVERABLE} ./
+	cd ${VENV}/lib/python3.6/site-packages
+	find . -type f -not -name '*.pyc' -print | zip -q9@ ${DELIVERABLE}
 
 .PHONY: install-deps
 install-deps: Pipfile Pipfile.lock
