--- a/dbgen/Makefile
+++ b/dbgen/Makefile
@@ -3,7 +3,7 @@ DELIVERABLE=${abspath ${FILE}}
 
 ${DELIVERABLE}: $(wildcard ./*.py) ids.json install-deps
 	-rm ${DELIVERABLE}
-	zip -qr9 ${DELIVERABLE} ./
+	find . -type d -name '.venv' -prune -o -type f -print | zip -q9@ ${DELIVERABLE}
 	$(eval VENV = $(shell pipenv --venv))
 	cd ${VENV}/lib/python3.6/site-packages && find . -type f -not -name '*.pyc' -print | zip -q9@ ${DELIVERABLE}
 
